--- a/index.html
+++ b/index.html
@@ -13,49 +13,49 @@
 	  <main>
 	<h1>CSS</h1>
 	<div class="secondary-header">
-	  <h4 class="border">Lorem Ipsum</h4>
+	  <h4 class="border">CSS Snippet Cheatsheet Wireframe</h4>
 	</div>
 		<section class="cards-container flex-row">
 	  	<div class="card">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
 		  		<p>Pellentesque</p>
-		  		<p class="card-snippet border">Code Snippet</p>
+		  		<code class="card-snippet">Code Snippet</code>
 			</div>
 	  	</div>
 	  	<div class="card border">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
 		  	<p>Pellentesque</p>
-		  	<p class="card-snippet border">Code Snippet</p>
+		  	<code class="card-snippet">Code Snippet</code>
 			</div>
 	  	</div>
 	  	<div class="card border">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
 		  	<p>Pellentesque</p>
-		  	<p class="card-snippet border">Code Snippet</p>
+		  	<code class="card-snippet">Code Snippet</code>
 			</div>
 	  	</div>
 	  	<div class="card border">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
 		  	<p>Pellentesque</p>
-		  	<p class="card-snippet border">Code Snippet</p>
+		  	<code class="card-snippet">Code Snippet</code>
 			</div>
 	  	</div>
 	  	<div class="card border">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
 		  	<p>Pellentesque</p>
-		  	<p class="card-snippet border">Code Snippet</p>
+		  	<code class="card-snippet">Code Snippet</code>
 			</div>
 	  	</div>
 	  	<div class="card border">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
 		  	<p>Pellentesque</p>
-		  	<p class="card-snippet border">Code Snippet</p>
+		  	<code class="card-snippet">Code Snippet</code>
 			</div>
 	  	</div>
 		</section>
