--- a/index.html
+++ b/index.html
@@ -11,53 +11,53 @@
 
   <body>
 	  <main>
-	<h1>CSS</h1>
+	<h1>CSS Snippet Cheatsheet Wireframe</h1>
 	<div class="secondary-header">
-	  <h4 class="border">CSS Snippet Cheatsheet Wireframe</h4>
+	  <h4 class="border"></h4>
 	</div>
 		<section class="cards-container flex-row">
-	  	<div class="card">
+		  <div class="card">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
-		  		<p>Pellentesque</p>
-		  		<code class="card-snippet">Code Snippet</code>
+				  <p>Pellentesque</p>
+				  <code class="card-snippet">Code Snippet</code>
 			</div>
-	  	</div>
-	  	<div class="card border">
+		  </div>
+		  <div class="card border">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
-		  	<p>Pellentesque</p>
-		  	<code class="card-snippet">Code Snippet</code>
+			  <p>Pellentesque</p>
+			  <code class="card-snippet">Code Snippet</code>
 			</div>
-	  	</div>
-	  	<div class="card border">
+		  </div>
+		  <div class="card border">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
-		  	<p>Pellentesque</p>
-		  	<code class="card-snippet">Code Snippet</code>
+			  <p>Pellentesque</p>
+			  <code class="card-snippet">Code Snippet</code>
 			</div>
-	  	</div>
-	  	<div class="card border">
+		  </div>
+		  <div class="card border">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
-		  	<p>Pellentesque</p>
-		  	<code class="card-snippet">Code Snippet</code>
+			  <p>Pellentesque</p>
+			  <code class="card-snippet">Code Snippet</code>
 			</div>
-	  	</div>
-	  	<div class="card border">
+		  </div>
+		  <div class="card border">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
-		  	<p>Pellentesque</p>
-		  	<code class="card-snippet">Code Snippet</code>
+			  <p>Pellentesque</p>
+			  <code class="card-snippet">Code Snippet</code>
 			</div>
-	  	</div>
-	  	<div class="card border">
+		  </div>
+		  <div class="card border">
 			<h1 class="card-title border">Title</h1>
 			<div class="card-subheader border">
-		  	<p>Pellentesque</p>
-		  	<code class="card-snippet">Code Snippet</code>
+			  <p>Pellentesque</p>
+			  <code class="card-snippet">Code Snippet</code>
 			</div>
-	  	</div>
+		  </div>
 		</section>
 	<footer class="border">
 	  <h2>Footer</h2>
