--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   <link rel="stylesheet" href="./assets/css/reset.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
-
   <body>
 	  <main>
-	<h1>CSS Snippet Cheatsheet Wireframe</h1>
-	<div class="secondary-header">
-	  <h4 class="border"></h4>
-	</div>
+		  <header>
+			  <h1>CSS Snippet Cheatsheet Wireframe</h1>
+			  <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quam augue, suscipit eu accumsan non, ultricies vitae massa.</h2>
+		  </header>
 		<section class="cards-container flex-row">
 		  <div class="card">
 			<h1 class="card-title border">Title</h1>
