--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Custom Forms with CSS</title>
   <link rel="stylesheet" href="./assets/css/reset.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="icon" href="/favicon.ico">
 </head>
   <body>
 	  <main>
